--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "econea/nusoap": "^0.9.17",
         "laravel/framework": "^11.0",
         "laravel/passport": "^12.0",
         "laravel/sanctum": "^4.0",
