--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cloudinary-labs/cloudinary-laravel": "^3.0",
         "econea/nusoap": "^0.9.17",
         "google/apiclient": "^2.18",
         "laravel/framework": "^11.0",
